--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-  <a class="navbar-brand" href="#"><img src="img/快磕.png" width="130" height="100"></a>
+  <a class="navbar-brand" href="#"><img src="img/快磕.png"width="100" height="80"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
  <span class="navbar-toggler-icon"></span></button>
  <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -25,10 +25,10 @@
         <a class="nav-link" href="#">List<span class="sr-only">(current)</span></a>
        </li>
        <li class="nav-item">
-         <a class="nav-link" href="#">More couples<span class="sr-only">(current)</span></a>
+         <a class="nav-link" href="#">News<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Connect<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Social<span class="sr-only">(current)</span></a>
          </li>
      </ul>
      <form class="form-inline my-2 my-lg-0">
@@ -55,8 +55,8 @@
       <div class="carousel-item active">
         <img src="img\1.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption">
-          <h1>Better Days</h1>
-          <h2>The sweetest details</h2>
+          <h1 class="display-1">-四鸭-</h1>
+          <h2 class="display-3">The sweetest details</h2>
           <button type="button" class="btn btn-outline-danger">❤</button>
         </div>
       </div>
@@ -85,7 +85,7 @@
       If this be error and upon me proved.I never writ, nor no man ever loved.
   </div>
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-1">
-    <a href="#"><button type="button" class="btn btn-outline-dark">Love is love</button>
+    <a href="https://zh.m.wikipedia.org/zh-cn/LGBT"><button type="button" class="btn btn-outline-dark">Love is love</button>
 </div>
 </div>
 </div>
@@ -104,19 +104,18 @@
 <div class="container-fluid">
   <dic class="row text-center">
   <div class="col-xs-12 col-sm-6 col-md-4">
-    <i class="fas fa-code"></i>
-    <h3>HTML 5</h3>
-    <p>aksdjfhkasujdfh</p>
+    <h3>List</h3>
+    <p>Here's a collection of all the hot couples of the moment and ranked by heat.If you haven't found your true love couples,maybe you can find the answer here.</p>
   </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
       <i class="fas fa-bold"></i>
-      <h3>bootstrap</h3>
-      <p>aksdjfhkasujdfh</p>
+      <h3>News</h3>
+      <p>Since the website offers only the most sweetest content,you can check out more new stories and details of your couples in this section.Meanwhile,you can post what you've collected as well.</p>
     </div>
       <div class="col-sm-12 col-md-4">
         <i class="fas fa-css3"></i>
-        <h3>CSS3</h3>
-        <p>aksdjfhkasujdfh</p>
+        <h3>Social</h3>
+        <p>In this section you can get to know friends who share your interests and have more fun together shipping cute couples.But remember,do not fight with each other.Everyone's preferences should be respected</p>
      </div>
     </div>
      </div>
@@ -270,6 +269,9 @@
 <h5>&copy:google.com</h5>
 </div>
 </div>
+<blockquote class="blockquote text-center">
+  <p class="mb-0" font-family="serif">总有你能磕的!</p>
+</blockquote>
         </footer>
    </body>
 </html>
