--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
+     <script src="https://kit.fontawesome.com/cfd552add0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-  <a class="navbar-brand" href="#"><img src="img/快磕.png"width="100" height="80"></a>
+  <a class="navbar-brand" href="#"><img src="img/快磕.png"width="80" height="60"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
  <span class="navbar-toggler-icon"></span></button>
  <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -53,9 +54,9 @@
     </ol>
     <div class="carousel-inner" >
       <div class="carousel-item active">
-        <img src="img\1.jpeg" class="d-block w-100" alt="...">
+        <img src="img\1.jpeg" width="100%" height="100%" >
         <div class="carousel-caption">
-          <h1 class="display-1">-四鸭-</h1>
+          <h1 class="display-2">-四鸭-</h1>
           <h2 class="display-3">The sweetest details</h2>
           <button type="button" class="btn btn-outline-danger">❤</button>
         </div>
@@ -82,10 +83,10 @@
   <div class="row jumbotron">
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-11">
       <p class="lead">Love alters not with his brief hours and weeks.But bears it out even to the edge of doom.
-      If this be error and upon me proved.I never writ, nor no man ever loved.
+      <br>If this be error and upon me proved.I never writ, nor no man ever loved.
   </div>
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-1">
-    <a href="https://zh.m.wikipedia.org/zh-cn/LGBT"><button type="button" class="btn btn-outline-dark">Love is love</button>
+    <a href="https://zh.m.wikipedia.org/zh-cn/LGBT"><button type="button" class="btn btn-primary btn-lg">Love is love</button>
 </div>
 </div>
 </div>
@@ -101,21 +102,22 @@
 </div>
 </div>
 <!-- Three Column Section -->
-<div class="container-fluid">
+<div class="container-fluid" >
   <dic class="row text-center">
-  <div class="col-xs-12 col-sm-6 col-md-4">
-    <h3>List</h3>
-    <p>Here's a collection of all the hot couples of the moment and ranked by heat.If you haven't found your true love couples,maybe you can find the answer here.</p>
+  <div class="col-xs-12 col-sm-6 col-md-4" >
+<i class="fa fa-fire" aria-hidden="true"></i>
+    <h3 class="display-4">List</h3>
+    <p class="lead">Here's a collection of all the hot couples of the moment and ranked by heat.If you haven't found your true love couples,maybe you can find the answer here.</p>
   </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
-      <i class="fas fa-bold"></i>
-      <h3>News</h3>
-      <p>Since the website offers only the most sweetest content,you can check out more new stories and details of your couples in this section.Meanwhile,you can post what you've collected as well.</p>
+<i class="fa fa-paper-plane" aria-hidden="true"></i>
+      <h3 class="display-4">News</h3>
+      <p class="lead">Since the website offers only the most sweetest content,you can check out more new stories and details of your couples in this section.Meanwhile,you can post what you've collected as well.</p>
     </div>
       <div class="col-sm-12 col-md-4">
-        <i class="fas fa-css3"></i>
-        <h3>Social</h3>
-        <p>In this section you can get to know friends who share your interests and have more fun together shipping cute couples.But remember,do not fight with each other.Everyone's preferences should be respected</p>
+<i class="fa fa-comments" aria-hidden="true"></i>
+        <h3 class="display-4">Social</h3>
+        <p class="lead">In this section you can get to know friends who share your interests and have more fun together shipping cute couples.But remember,do not fight with each other.Everyone's preferences should be respected</p>
      </div>
     </div>
      </div>
@@ -124,15 +126,15 @@
  <div class="container-fluid">
 <div class="row">
   <div class="col-lg-6">
-    <h2>If you can't find...</h2>
-    <p>asdfasdfasdfasdfasdfasdfasdf</p>
-      <p>soeufhkaujbvojsdnhfk</p>
-            <p>aroufhnkasdjnclksa</p>
+    <h2 class="display-4">If you can't find...</h2><br>
+    <p class="lead">An important feature of this part is that you can attract friends who also want to innocate new couples by launching hashtags.</p>
+      <p class="lead">If the number of people reaches a certain number, we will add new category.</p>
+            <p class="lead">In a word,we will try our best to provide you with the best sercive.</p>
           <br>
-        <a href="#" class="btn btn-info">Info</button></a>
+      <a href="#"><button type="button" class="btn btn-outline-danger">Current hot hashtags</button></a>
      </div>
 <div class="col-lg-6">
-  <img src="img\123.jpg" class="img-fluid">
+  <img src="img\8.jpg" class="img-fluid" width="800em" height="600em">
 </div>
 </div>
 </div>
@@ -145,25 +147,26 @@
   </div>
 </figure>
 <!-- emoji Section -->
-<button class="fun" data-toggle="collapse" data-target="#emoji">Click for fun
+<button class="fun" data-toggle="collapse" data-target="#emoji">Click for fun</button>
   <div id="emoji" class="collapse">
     <div class="container-fluid">
  <div class="row text-center">
    <div class="col-sm-6 col-md-3">
-  <img class="gif" src="img/gif/panda.gif">
+  <img class="gif" src="img/gif/a.gif">
   </div>
     <div class="col-sm-6 col-md-3">
-  <img class="gif" src="img/gif/poo.gif">
+  <img class="gif" src="img/gif/b.gif">
    </div>
    <div class="col-sm-6 col-md-3">
-  <img class="gif" src="img/gif/unicorn.gif">
+  <img class="gif" src="img/gif/c.gif">
    </div>
    <div class="col-sm-6 col-md-3">
-  <img class="gif" src="img/gif/chicken.gif">
+  <img class="gif" src="img/gif/d.gif">
    </div>
     </div>
     </div>
-  </button>
+  </div>
+
     <!-- Meet the team -->
     <div class="container-fluid">
  <div class="row text-center">
@@ -177,50 +180,39 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
-        <img class="card=img-top" src="img\xian.jpg">
+        <img class="card=img-top" width="590em"height="590em" src="img\xian.jpg">
         <div class="card-body">
           <h4 class="card-title">Xian</h4>
-          <p class="card-text">Cute girl.</p>
-          <a href="#" class="btn btn-outline-secondary">See Profile<a>
+          <p class="card-text">2000.05.23.<br>
+            She was born in Shandong.Recently, She has two sons.</p>
+          <a href=" http://music.163.com/m/user/home?id=592316735" class="btn btn-outline-secondary">See Profile</a>
       </div>
     </div>
     </div>
       <div class="col-md-4">
         <div class="card">
-          <img class="card=img-top" src="img\tou.jpg">
+          <img class="card=img-top" width="590em"height="590em" src="img\toutou.jpg">
           <div class="card-body">
-            <h4 class="card-title">Xian</h4>
-            <p class="card-text">Cute girl.</p>
-            <a href="#" class="btn btn-outline-secondary">See Profile<a>
+            <h4 class="card-title">Wu Tou</h4>
+            <p class="card-text">2019.05.05<br>Xian's little son who actually is a gorilla.</p>
+            <a href="https://www.ikea.cn/cn/zh/p/djungelskog-you-en-ge-si-ku-ge-mao-rong-wan-ju-hong-xing-xing-30402840/" class="btn btn-outline-secondary">See Profile</a>
         </div>
       </div>
     </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card=img-top" src="img\chris.jpg">
+            <img class="card=img-top" width="590em"height="590em" src="img\chris.jpg">
             <div class="card-body">
-              <h4 class="card-title">Xian</h4>
-              <p class="card-text">Cute girl.</p>
-              <a href="#" class="btn btn-outline-secondary">See Profile<a>
+              <h4 class="card-title">Babychris</h4>
+              <p class="card-text">2017.06.23<br>Xian's older son who actually is a sloth.</p>
+              <a href="https://www.bilibili.com/video/BV1wx411n7Yp?from=search&seid=4971030539768848163" class="btn btn-outline-secondary">See Profile</a>
             </div>
           </div>
           </div>
      </div>
    </div>
+    <hr class="my-4">
    <!-- Two column Section -->
-   <div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-6">
-      <h2>Our Philosophy</h2>
-      <p>asdfasdfasdfasdfasdfasdfasdf</p>
-        <p>soeufhkaujbvojsdnhfk</p>
-       </div>
-  <div class="col-lg-6">
-    <img src="img\12-1ZH21115.jpg" class="img-fluid">
-  </div>
-  </div>
-  </div>
-   <hr class="my-4">
    <!-- connect -->
    <div class="container-fluid">
      <div class="row text-center">
@@ -229,10 +221,10 @@
        </div>
        <div class="col-12 social">
          <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-               <a href="#"><i class="fab fa-google"></i></a>
-                  <a href="#"><i class="fab fa-instagram"></i></a>
-                     <a href="#"><i class="fab fa-youtube"></i></a>
+         <a href="#"><i class="fab fa-twitter"></i></a>
+         <a href="#"><i class="fab fa-google-plus-g"></i></a>
+         <a href="#"><i class="fab fa-instagram"></i></a>
+         <a href="#"><i class="fab fa-youtube"></i></a>
        </div>
      </div>
    </div>
@@ -267,6 +259,7 @@
      <div class="col-12">
 <hr class="light">
 <h5>&copy:google.com</h5>
+</div>
 </div>
 </div>
 <blockquote class="blockquote text-center">
